--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <img src="https://www.wildcodeschool.com/assets/logo_main-e4f3f744c8e717f1b7df3858dce55a86c63d4766d5d9a7f454250145f097c2fe.png" alt="Wild Code School logo" />
       Les Argonautes
     </h1>
+    <link rel="stylesheet" type="text/css" href="style.css" media=”screen” />
   </header>
   
   <!-- Main section -->
